--- a/Interfaz.ui
+++ b/Interfaz.ui
@@ -602,9 +602,12 @@ alternate-background-color: rgb(116, 163, 173);</string>
            <bool>true</bool>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="pg_inicio">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
            <layout class="QHBoxLayout" name="horizontalLayout_2">
             <item>
              <widget class="QFrame" name="frameciz">
@@ -963,6 +966,9 @@ color: rgb(255, 255, 255);</string>
                  <property name="horizontalHeaderFormat">
                   <enum>QCalendarWidget::SingleLetterDayNames</enum>
                  </property>
+                 <property name="verticalHeaderFormat">
+                  <enum>QCalendarWidget::NoVerticalHeader</enum>
+                 </property>
                  <property name="navigationBarVisible">
                   <bool>true</bool>
                  </property>
@@ -1207,7 +1213,7 @@ color: rgb(255, 255, 255);</string>
             <item>
              <widget class="QFrame" name="framecder">
               <property name="enabled">
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
               <property name="minimumSize">
                <size>
@@ -1220,6 +1226,12 @@ color: rgb(255, 255, 255);</string>
                 <width>400</width>
                 <height>16777215</height>
                </size>
+              </property>
+              <property name="acceptDrops">
+               <bool>false</bool>
+              </property>
+              <property name="autoFillBackground">
+               <bool>false</bool>
               </property>
               <property name="frameShape">
                <enum>QFrame::StyledPanel</enum>
@@ -1360,38 +1372,14 @@ color: rgb(255, 255, 255);</string>
                  <item row="4" column="1">
                   <widget class="QLineEdit" name="LE_Correo_ini"/>
                  </item>
-                 <item row="5" column="0">
-                  <widget class="QLabel" name="label_9">
-                   <property name="font">
-                    <font>
-                     <pointsize>10</pointsize>
-                     <weight>75</weight>
-                     <bold>true</bold>
-                    </font>
-                   </property>
-                   <property name="text">
-                    <string>Comentarios:</string>
-                   </property>
-                  </widget>
-                 </item>
                  <item row="5" column="1">
-                  <widget class="QTextEdit" name="TE_Comen_ini">
-                   <property name="maximumSize">
-                    <size>
-                     <width>16777215</width>
-                     <height>120</height>
-                    </size>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="6" column="1">
                   <widget class="QPushButton" name="btn_enviar_ini">
                    <property name="text">
                     <string>Enviar</string>
                    </property>
                   </widget>
                  </item>
-                 <item row="7" column="1">
+                 <item row="6" column="1">
                   <widget class="QPushButton" name="btn_cancelar_ini">
                    <property name="text">
                     <string>Cancelar</string>
@@ -1399,6 +1387,39 @@ color: rgb(255, 255, 255);</string>
                   </widget>
                  </item>
                 </layout>
+               </item>
+               <item>
+                <widget class="QLabel" name="lbl_confirm_ini">
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>37</height>
+                  </size>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>16777156</width>
+                   <height>37</height>
+                  </size>
+                 </property>
+                 <property name="font">
+                  <font>
+                   <pointsize>10</pointsize>
+                   <weight>75</weight>
+                   <bold>true</bold>
+                  </font>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">background-color: rgb(42, 85, 101);
+color: rgb(255, 255, 255);</string>
+                 </property>
+                 <property name="text">
+                  <string/>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignCenter</set>
+                 </property>
+                </widget>
                </item>
                <item>
                 <spacer name="verticalSpacer_2">
@@ -1525,7 +1546,7 @@ color: rgb(255, 255, 255);</string>
              <widget class="QFrame" name="frame_8">
               <property name="minimumSize">
                <size>
-                <width>600</width>
+                <width>700</width>
                 <height>450</height>
                </size>
               </property>
@@ -1542,6 +1563,18 @@ color: rgb(255, 255, 255);</string>
                <enum>QFrame::Raised</enum>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout">
+               <property name="leftMargin">
+                <number>0</number>
+               </property>
+               <property name="topMargin">
+                <number>0</number>
+               </property>
+               <property name="rightMargin">
+                <number>0</number>
+               </property>
+               <property name="bottomMargin">
+                <number>0</number>
+               </property>
                <item>
                 <widget class="QLabel" name="label_7">
                  <property name="minimumSize">
@@ -1563,7 +1596,55 @@ color: rgb(255, 255, 255);</string>
                 </widget>
                </item>
                <item>
-                <widget class="QTableWidget" name="tW_leven"/>
+                <widget class="QTableWidget" name="tW_leven">
+                 <property name="minimumSize">
+                  <size>
+                   <width>720</width>
+                   <height>300</height>
+                  </size>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>720</width>
+                   <height>400</height>
+                  </size>
+                 </property>
+                 <column>
+                  <property name="text">
+                   <string>ID</string>
+                  </property>
+                 </column>
+                 <column>
+                  <property name="text">
+                   <string>Nombre</string>
+                  </property>
+                 </column>
+                 <column>
+                  <property name="text">
+                   <string>Apellidos</string>
+                  </property>
+                 </column>
+                 <column>
+                  <property name="text">
+                   <string>Celular</string>
+                  </property>
+                 </column>
+                 <column>
+                  <property name="text">
+                   <string>Correo</string>
+                  </property>
+                 </column>
+                 <column>
+                  <property name="text">
+                   <string>Fecha_inicial</string>
+                  </property>
+                 </column>
+                 <column>
+                  <property name="text">
+                   <string>Fecha_final</string>
+                  </property>
+                 </column>
+                </widget>
                </item>
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -1582,12 +1663,37 @@ color: rgb(255, 255, 255);</string>
                  </item>
                  <item>
                   <widget class="QPushButton" name="btn_refresh_leven">
+                   <property name="minimumSize">
+                    <size>
+                     <width>120</width>
+                     <height>37</height>
+                    </size>
+                   </property>
+                   <property name="maximumSize">
+                    <size>
+                     <width>120</width>
+                     <height>37</height>
+                    </size>
+                   </property>
                    <property name="text">
                     <string>Actualizar</string>
                    </property>
                   </widget>
                  </item>
                 </layout>
+               </item>
+               <item>
+                <spacer name="verticalSpacer_4">
+                 <property name="orientation">
+                  <enum>Qt::Vertical</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>20</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                </spacer>
                </item>
               </layout>
              </widget>
