--- a/Interfaz.ui
+++ b/Interfaz.ui
@@ -1546,13 +1546,13 @@ color: rgb(255, 255, 255);</string>
              <widget class="QFrame" name="frame_8">
               <property name="minimumSize">
                <size>
-                <width>700</width>
+                <width>730</width>
                 <height>450</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>600</width>
+                <width>730</width>
                 <height>500</height>
                </size>
               </property>
@@ -1596,7 +1596,7 @@ color: rgb(255, 255, 255);</string>
                 </widget>
                </item>
                <item>
-                <widget class="QTableWidget" name="tW_leven">
+                <widget class="QTableWidget" name="tableW">
                  <property name="minimumSize">
                   <size>
                    <width>720</width>
@@ -1609,6 +1609,51 @@ color: rgb(255, 255, 255);</string>
                    <height>400</height>
                   </size>
                  </property>
+                 <row>
+                  <property name="text">
+                   <string>0</string>
+                  </property>
+                 </row>
+                 <row>
+                  <property name="text">
+                   <string>1</string>
+                  </property>
+                 </row>
+                 <row>
+                  <property name="text">
+                   <string>2</string>
+                  </property>
+                 </row>
+                 <row>
+                  <property name="text">
+                   <string>3</string>
+                  </property>
+                 </row>
+                 <row>
+                  <property name="text">
+                   <string>4</string>
+                  </property>
+                 </row>
+                 <row>
+                  <property name="text">
+                   <string>5</string>
+                  </property>
+                 </row>
+                 <row>
+                  <property name="text">
+                   <string>6</string>
+                  </property>
+                 </row>
+                 <row>
+                  <property name="text">
+                   <string>7</string>
+                  </property>
+                 </row>
+                 <row>
+                  <property name="text">
+                   <string>8</string>
+                  </property>
+                 </row>
                  <column>
                   <property name="text">
                    <string>ID</string>
@@ -1621,7 +1666,7 @@ color: rgb(255, 255, 255);</string>
                  </column>
                  <column>
                   <property name="text">
-                   <string>Apellidos</string>
+                   <string>Apellido</string>
                   </property>
                  </column>
                  <column>
@@ -2007,51 +2052,14 @@ color: rgb(255, 255, 255);</string>
                <item row="4" column="1">
                 <widget class="QLineEdit" name="LE_correo_mod"/>
                </item>
-               <item row="5" column="0">
-                <widget class="QLabel" name="label_2">
-                 <property name="font">
-                  <font>
-                   <pointsize>10</pointsize>
-                   <weight>75</weight>
-                   <bold>true</bold>
-                  </font>
-                 </property>
-                 <property name="text">
-                  <string>Comentarios:</string>
-                 </property>
-                </widget>
-               </item>
                <item row="5" column="1">
-                <widget class="QTextEdit" name="TE_comen_mod">
-                 <property name="minimumSize">
-                  <size>
-                   <width>0</width>
-                   <height>100</height>
-                  </size>
-                 </property>
-                 <property name="maximumSize">
-                  <size>
-                   <width>16777215</width>
-                   <height>100</height>
-                  </size>
-                 </property>
-                </widget>
-               </item>
-               <item row="6" column="1">
                 <widget class="QPushButton" name="btn_modificar_mod">
                  <property name="text">
                   <string>Modificar</string>
                  </property>
                 </widget>
                </item>
-               <item row="8" column="1">
-                <widget class="QPushButton" name="btn_regresar_mod">
-                 <property name="text">
-                  <string>Salir</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="7" column="1">
+               <item row="6" column="1">
                 <widget class="QPushButton" name="btn_cancelar_mod">
                  <property name="text">
                   <string>Cancelar</string>
